# MCGeoBridge

./: .gitignore  CHANGELOG.md  CITATION.cff  CPC_PROGRAM_PACKAGE_README.md  LICENSE  README.md  REPRODUCIBILITY.md  THIRD_PARTY_NOTICES.md
doc/: MCGeoBridge_user_manual.md  mcnp2gdml_user_manual_zh.md
examples/seven_hole_disk/: README.md  seven_hole_disk.gdml  seven_hole_disk.i
reproducibility/: release_1_0_0_conversion_performance.json  release_1_0_0_sampling_sensitivity.md  release_1_0_0_verification.md  release_1_0_2_conversion_performance.json
reproducibility/validation_20260718/: README.md  geant4_load_70.json
src/: engineering_smoke.py  mcnp2gdml.py  test_geom.py
src/gdml/: GDefine.py  GMaterial.py  GModel.py  GSolid.py  GVolume.py  __init__.py
src/mcnp/: MCell.py  (+8 more)
test/: test_corpus_summary.py  test_parser_regressions.py
tools/: audit_mcnp_xs_libraries.py  benchmark_conversion.py  build_corpus_selection.py  build_visual_preview_pdf.py  corpus_inventory.py  gdml_integrity.py  make_twocolumn_body.py  prepare_mcnp_xs_variant.py  render_assembly_plan.py  render_geometry_breadth_figure.py  run_corpus_smoke.py  run_criticality_validation.py  run_geant4_validation.py  run_transport_validation.py  summarize_corpus_coverage.py  summarize_layered_validation.py  validate_gdml_schema.py
tools/gdml_render/: CMakeLists.txt  README.md  autocrop.py  render_gdml.cc
tools/geant4_validation/: CMakeLists.txt  README.md  g4check.cc
tools/physics_validation/: CMakeLists.txt  KBS3_PUBLIC_REFERENCE_AUDIT.md  ORSPHERE_CASE2_AUDIT.md  README.md  criticality_validation.cc  fission_multiplicity_probe.cc  generate_pwr_lattice_sources.py  hadr03_u235_nubar.mac  summarize_criticality_convergence.py  transport_validation.cc
tools/physics_validation/patches/: geant4-11.4.1-particlehp-yield-energy.patch
(+35 files in other folders)
